<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Inserimento">

    <!--Nome-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="Inserimento dati"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Nome:"/>

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:background="@color/colorAccent"
                android:gravity="left"
                android:hint="es. Cala Mosca"
                android:inputType="textCapWords"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!--Descrizione-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Descrizione:"/>

            <EditText
                android:id="@+id/editTextDescrizione"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:background="@color/colorAccent"
                android:hint="es. nessun bar"
                android:layout_marginLeft="21dp"
                android:inputType="textCapWords"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>
        <!--Altitudine-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Altitudine:"/>

            <EditText
                android:id="@+id/editTextAltitudine"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:background="@color/colorAccent"
                android:hint="es. 15 (metri)"
                android:inputType="textCapWords"
                android:layout_marginLeft="35dp"
                android:text="5"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!--Posizione GPS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_gravity="center"
                android:text="Inserisci Coordinate tramite Gps:"/>

            <Button
                android:id="@+id/buttonPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="Inserisci  GPS"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!--Comune-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Comune:"/>

            <EditText
                android:id="@+id/editTextComune"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:background="@color/colorAccent"
                android:hint="es. Cagliari"
                android:inputType="textCapWords"
                android:layout_marginLeft="42dp"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!--Categoria-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Categoria:"/>


            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="260dp"
                android:layout_height="25dp"
                android:layout_marginLeft="32dp"
                android:background="@color/colorAccent"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!--Hashtag-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBoxHashtagUno"
                android:onClick="onCheckboxClicked"
                android:layout_marginLeft="99dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/hashtagUno"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Hashtag:"/>

            <CheckBox
                android:layout_marginLeft="42dp"
                android:id="@+id/checkBoxHashtagDue"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/hashtagDue"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp"/>

        <CheckBox
            android:id="@+id/checkBoxHashtagTre"
            android:layout_marginLeft="99dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/hashtagTre"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!--Visitabile-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="Visitabile:"/>


            <RadioGroup android:id="@+id/rbGroup"
                android:layout_width="150dp"
                android:layout_marginLeft="38dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbVisitabileTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/textVisitabileTrue" />

                <RadioButton android:id="@+id/rbVisitabileFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_marginLeft="15dp"
                    android:text="@string/textVisitabileFalse"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp"/>
        <!--Inserisci-->
        <Button
            android:id="@+id/buttonInviaDati"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="Invia" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>